# water-tracker

./: .gitignore  package-lock.json  package.json  vite.config.js
src/: .watermark  index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
