[package]
name = "water"
version = "0.1.0"
description = "喝了吗水 - 轻量桌面喝水追踪工具"
authors = ["leo"]
edition = "2021"

[lib]
name = "water_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
